# ucat

./: .envrc  .gitignore  Cargo.toml  readme.md
boards/esp32s3/: Cargo.toml  sdkconfig.defaults
boards/esp32s3-embassy/: Cargo.toml
boards/esp32s3-embassy/.cargo/: config.toml
boards/esp32s3-embassy/src/: main.rs
boards/esp32s3/.cargo/: config.toml
boards/esp32s3/src/: bindings.h  main.rs
demo/frontend/: Cargo.toml
demo/frontend/src/: main.rs
demo/schema/: Cargo.toml
demo/schema/src/: lib.rs
scratch/: Cargo.toml
src/: controller.rs  device.rs  lib.rs  util.rs
