[package]
name = "ucat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", features = ["experimental-derive"]  }
heapless = { version = "*", features = ["serde"] }
num_enum = { version = "0.7", default-features = false }
crc = "3"
const-str = "0.5.6"

embedded-io-async = "0.6"
bbqueue = "*"
log = "*"

[dev-dependencies]
smol = "1.3.0"
env_logger = "*"
futures-lite = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = []