[package]
name = "ucat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", features = ["experimental-derive"]  }
heapless = { version = "0.8", features = ["serde"] }
num_enum = { version = "0.7", default-features = false }
crc = "3"
const-str = "0.5"

embedded-io = "0.6"
embedded-io-async = "0.6"
bbqueue = "0.5"
log = "0.4"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

# TODO: Use this to communicate between frame handling thread and status/command thread?
# atomic_pingpong = "0.2.3"


[dev-dependencies]
smol = "2"
env_logger = "*"
futures-lite = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = []
