[package]
name = "ucat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", features = ["experimental-derive"]  }
num_enum = { version = "0.7", default-features = false }
crc = "3"
embedded-io = "0.6"
embedded-io-async = "0.6"
log = "0.4"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
# TODO: Use this to communicate between frame handling thread and status/command thread?
# atomic_pingpong = "0.2.3"

# TODO: pull this out into device crate just for derive schema. Maybe make that crate available separately.
eui = { path = "../eui", optional = true }

[dev-dependencies]
smol = "2"
env_logger = "*"
futures-lite = { version = "2.0.0", default-features = false }

[features]
default = ["std", "eui"]
std = ["postcard/use-std"]

