[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
ucat = { path = "../" }
eui = { path = "../../eui" }
anyhow = "*"
crc = "3.0.1"
postcard = { version = "1.0.8", features = ["use-std"] }
serialport = "4.3.0"
log = "*"
env_logger = "*"
smol = "2"
embedded-io = "0.6"
embedded-io-async = { version = "0.6", features = ["std"] }

