[package]
name = "esp32s3-embassy"
version = "0.1.0"
authors = ["Kevin J. Lynagh <kevin@keminglabs.com>"]
edition = "2021"

[dependencies]
ucat = { path = "../../", default-features = false }

log = { version = "0.4" }

esp32s3-hal = { version = "0.15", features = ["async", "log", "embassy", "embassy-executor-thread", "embassy-time-timg0"] }
esp-backtrace = { version = "0.10", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8", features = ["esp32s3", "log"] }
esp-hal-smartled = { version = "*", features = ["esp32s3"] }

embedded-hal       = "1"
embedded-hal-async = "1.0.0"
embedded-io-async  = "0.6"

embassy-executor   = { version = "0.5", features = ["nightly"] }
embassy-time = { version = "0.3" }
embassy-sync       = "0.5"

smart-leds = "0.4"
bbqueue = "0.5"
futures = { version = "0.3", default-features = false }
static_cell = { version = "2.0.0", features = ["nightly"] }


[features]
default = ["temp-sensor"]
led = []
temp-sensor = []

[profile.release]
debug = false
lto = true
opt-level = "s"
incremental = false
codegen-units = 1