[package]
name = "esp32s3"
version = "0.1.0"
authors = ["Kevin J. Lynagh <kevin@keminglabs.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
alloc = ["esp-idf-svc/alloc"]


[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-sys = { version = "0.33.7", default-features = false, features = ["std", "binstart"] }
anyhow = "*"

[build-dependencies]
embuild = "0.31.3"

[package.metadata.esp-idf-sys]
mcu = "esp32s3"
#esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig = "sdkconfig"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
esp_idf_version = "v5.1.1"


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "1.4.2~2" }
bindings_header = "src/bindings.h"